--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>React Landing Page</title>
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/landing-page.css">
   </head>
   <body>
